--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   path_provider: ^2.0.11
   intl: ^0.18.0
   url_launcher: ^6.1.10
+  uuid: ^3.0.4
 
 dev_dependencies:
   flutter_test:
